Removendo arquivos desnecessários do commit e adicionando ao .gitignore